Add a lot of translation hints.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6953 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin_basics.html
+++ b/trac/admin/templates/admin_basics.html
@@ -33,7 +33,7 @@ ${project.description}</textarea>
         </div>
       </fieldset>
       <div class="buttons">
-        <input type="submit" value="Apply changes" />
+        <input type="submit" value="${_('Apply changes')}" />
       </div>
     </form>
   </body>
