--- a/trac/admin/templates/admin_components.html
+++ b/trac/admin/templates/admin_components.html
@@ -51,8 +51,8 @@ $component.description</textarea>
             </fieldset>
           </div>
           <div class="buttons">
-            <input type="submit" name="cancel" value="Cancel" />
-            <input type="submit" name="save" value="Save" />
+            <input type="submit" name="cancel" value="${_('Cancel')}" />
+            <input type="submit" name="save" value="${_('Save')}" />
           </div>
         </fieldset>
       </form>
@@ -66,7 +66,7 @@ $component.description</textarea>
             </div>
             ${owner_field()}
             <div class="buttons">
-              <input type="submit" name="add" value="Add"/>
+              <input type="submit" name="add" value="${_('Add')}"/>
             </div>
           </fieldset>
         </form>
@@ -94,8 +94,8 @@ $component.description</textarea>
               </tbody>
             </table>
             <div class="buttons">
-              <input type="submit" name="remove" value="Remove selected items" />
-              <input type="submit" name="apply" value="Apply changes" />
+              <input type="submit" name="remove" value="${_('Remove selected items')}" />
+              <input type="submit" name="apply" value="${_('Apply changes')}" />
             </div>
             <p class="help">
               You can remove all items from this list to completely hide this
