--- a/trac/admin/templates/admin_logging.html
+++ b/trac/admin/templates/admin_logging.html
@@ -50,7 +50,7 @@
           </p>
         </div>
         <div class="buttons">
-          <input type="submit" value="Apply changes"/>
+          <input type="submit" value="${_('Apply changes')}"/>
         </div>
       </fieldset>
     </form>
