--- a/trac/admin/templates/admin_perms.html
+++ b/trac/admin/templates/admin_perms.html
@@ -41,7 +41,7 @@
           or a group.
         </p>
         <div class="buttons">
-          <input type="submit" name="add" value=" Add " />
+          <input type="submit" name="add" value="${_(' Add ')}" />
         </div>
       </fieldset>
     </form>
@@ -63,7 +63,7 @@
           Add a user or group to an existing permission group.
         </p>
         <div class="buttons">
-          <input type="submit" name="add" value=" Add "/>
+          <input type="submit" name="add" value="${_(' Add ')}"/>
         </div>
       </fieldset>
     </form>
@@ -90,7 +90,7 @@
         </tbody>
       </table>
       <div class="buttons" py:if="revoke_perm">
-        <input type="submit" name="remove" value="Remove selected items" />
+        <input type="submit" name="remove" value="${_('Remove selected items')}" />
       </div>
     </form>
   </body>
