--- a/trac/templates/macros.html
+++ b/trac/templates/macros.html
@@ -123,7 +123,7 @@
       </div>
     </fieldset>
     <div class="buttons">
-      <input type="submit" name="update" value="Update" />
+      <input type="submit" name="update" value="${_('Update')}" />
     </div>
   </py:def>
 
