--- a/trac/templates/theme.html
+++ b/trac/templates/theme.html
@@ -25,7 +25,7 @@
         <div py:if="'SEARCH_VIEW' in perm">
           <label for="proj-search">Search:</label>
           <input type="text" id="proj-search" name="q" size="18" accesskey="f" value="" />
-          <input type="submit" value="Search" />
+          <input type="submit" value="${_('Search')}" />
         </div>
       </form>
       ${navigation('metanav')}
