--- a/trac/ticket/templates/report_edit.html
+++ b/trac/ticket/templates/report_edit.html
@@ -37,8 +37,8 @@ $report.description</textarea>
 $report.sql</textarea>
           </div>
           <div class="buttons">
-            <input type="submit" value="Save report"/>
-            <input type="submit" name="cancel" value="Cancel"/>
+            <input type="submit" value="${_('Save report')}"/>
+            <input type="submit" name="cancel" value="${_('Cancel')}"/>
           </div>
         </div>
         <script type="text/javascript" src="${chrome.htdocs_location}js/wikitoolbar.js"></script>
