--- a/trac/timeline/templates/timeline.html
+++ b/trac/timeline/templates/timeline.html
@@ -27,7 +27,7 @@
         </label>
        </fieldset>
        <div class="buttons">
-        <input type="submit" name="update" value="Update" />
+         <input type="submit" name="update" value="${_('Update')}" />
        </div>
       </form>
 
