--- a/trac/versioncontrol/templates/diff_form.html
+++ b/trac/versioncontrol/templates/diff_form.html
@@ -54,7 +54,7 @@
             </p>
           </fieldset>
           <div class="buttons">
-            <input type="submit" value="View changes" />
+            <input type="submit" value="${_('View changes')}" />
           </div>
         </form>
       </div>
