--- a/trac/wiki/templates/wiki_delete.html
+++ b/trac/wiki/templates/wiki_delete.html
@@ -33,7 +33,7 @@
           This is an irreversible operation.
         </p>
         <div class="buttons">
-          <input type="submit" name="cancel" value="Cancel" />
+          <input type="submit" name="cancel" value="${_('Cancel')}" />
           <input type="submit" value="Delete $what" />
         </div>
       </form>
