--- a/trac/admin/templates/admin_enums.html
+++ b/trac/admin/templates/admin_enums.html
@@ -20,8 +20,8 @@
             <label>Name: <input type="text" name="name" value="${enum.name}" /></label>
           </div>
           <div class="buttons">
-            <input type="submit" name="cancel" value="Cancel"/>
-            <input type="submit" name="save" value="Save"/>
+            <input type="submit" name="cancel" value="${_('Cancel')}"/>
+            <input type="submit" name="save" value="${_('Save')}"/>
           </div>
         </fieldset>
       </form>
@@ -34,7 +34,7 @@
               <label>Name:<input type="text" name="name" id="name"/></label>
             </div>
             <div class="buttons">
-              <input type="submit" name="add" value="Add"/>
+              <input type="submit" name="add" value="${_('Add')}"/>
             </div>
           </fieldset>
         </form>
@@ -65,8 +65,8 @@
               </tbody>
             </table>
             <div class="buttons">
-              <input type="submit" name="remove" value="Remove selected items" />
-              <input type="submit" name="apply" value="Apply changes" />
+              <input type="submit" name="remove" value="${_('Remove selected items')}" />
+              <input type="submit" name="apply" value="${_('Apply changes')}" />
             </div>
             <p class="help">
               You can remove all items from this list to completely hide this
