--- a/trac/admin/templates/admin_milestones.html
+++ b/trac/admin/templates/admin_milestones.html
@@ -61,8 +61,8 @@ ${milestone.description}</textarea>
             </fieldset>
           </div>
           <div class="buttons">
-            <input type="submit" name="cancel" value="Cancel"/>
-            <input type="submit" name="save" value="Save"/>
+            <input type="submit" name="cancel" value="${_('Cancel')}"/>
+            <input type="submit" name="save" value="${_('Save')}"/>
           </div>
         </fieldset>
       </form>
@@ -86,7 +86,7 @@ ${milestone.description}</textarea>
               </label>
             </div>
             <div class="buttons">
-              <input type="submit" name="add" value="Add" />
+              <input type="submit" name="add" value="${_('Add')}" />
             </div>
           </fieldset>
         </form>
@@ -119,8 +119,8 @@ ${milestone.description}</textarea>
               </tr></tbody>
             </table>
             <div class="buttons">
-              <input type="submit" name="remove" value="Remove selected items" />
-              <input type="submit" name="apply" value="Apply changes" />
+              <input type="submit" name="remove" value="${_('Remove selected items')}" />
+              <input type="submit" name="apply" value="${_('Apply changes')}" />
             </div>
             <p class="hint">
               You can remove all items from this list to completely hide this
