--- a/trac/admin/templates/admin_versions.html
+++ b/trac/admin/templates/admin_versions.html
@@ -41,8 +41,8 @@ $version.description</textarea>
             </fieldset>
           </div>
           <div class="buttons">
-            <input type="submit" name="cancel" value="Cancel"/>
-            <input type="submit" name="save" value="Save"/>
+            <input type="submit" name="cancel" value="${_('Cancel')}"/>
+            <input type="submit" name="save" value="${_('Save')}"/>
           </div>
         </fieldset>
       </form>
@@ -63,7 +63,7 @@ $version.description</textarea>
               </label>
             </div>
             <div class="buttons">
-              <input type="submit" name="add" value="Add" />
+              <input type="submit" name="add" value="${_('Add')}" />
             </div>
           </fieldset>
         </form>
@@ -89,8 +89,8 @@ $version.description</textarea>
               </tbody>
             </table>
             <div class="buttons">
-              <input type="submit" name="remove" value="Remove selected items" />
-              <input type="submit" name="apply" value="Apply changes" />
+              <input type="submit" name="remove" value="${_('Remove selected items')}" />
+              <input type="submit" name="apply" value="${_('Apply changes')}" />
             </div>
             <p class="help">
               You can remove all items from this list to completely hide this
