--- a/trac/templates/attachment.html
+++ b/trac/templates/attachment.html
@@ -45,8 +45,8 @@
             <input type="hidden" name="action" value="new" />
             <input type="hidden" name="realm" value="$parent.realm" />
             <input type="hidden" name="id" value="$parent.id" />
-            <input type="submit" value="Add attachment" />
-            <input type="submit" name="cancel" value="Cancel" />
+            <input type="submit" value="${_('Add attachment')}" />
+            <input type="submit" name="cancel" value="${_('Cancel')}" />
           </div>
         </form>
       </py:when>
@@ -59,8 +59,8 @@
           <form method="post" action="">
             <div id="delete">
               <input type="hidden" name="action" value="delete" />
-              <input type="submit" name="cancel" value="Cancel" />
-              <input type="submit" value="Delete attachment" />
+              <input type="submit" name="cancel" value="${_('Cancel')}" />
+              <input type="submit" value="${_('Delete attachment')}" />
             </div>
           </form>
         </div>
