--- a/trac/ticket/templates/milestone_delete.html
+++ b/trac/ticket/templates/milestone_delete.html
@@ -30,8 +30,8 @@
         <option py:for="m in milestones">${m.name}</option>
       </select>
       <div class="buttons">
-       <input type="submit" name="cancel" value="Cancel" />
-       <input type="submit" value="Delete milestone" />
+        <input type="submit" name="cancel" value="${_('Cancel')}" />
+        <input type="submit" value="${_('Delete milestone')}" />
       </div>
     </form>
 
