--- a/trac/ticket/templates/report_delete.html
+++ b/trac/ticket/templates/report_delete.html
@@ -17,8 +17,8 @@
         <input type="hidden" name="action" value="delete" />
         <p><strong>Are you sure you want to delete this report?</strong></p>
         <div class="buttons">
-          <input type="submit" name="cancel" value="Cancel"/>
-          <input type="submit" value="Delete report"/>
+          <input type="submit" name="cancel" value="${_('Cancel')}"/>
+          <input type="submit" value="${_('Delete report')}"/>
         </div>
       </form>
 
