--- a/trac/wiki/templates/wiki_edit.html
+++ b/trac/wiki/templates/wiki_edit.html
@@ -110,16 +110,16 @@ $page.text</textarea>
         </fieldset>
         <div class="buttons" py:choose="action">
           <py:when test="'collision'">
-            <input type="submit" name="preview" value="Preview" disabled="disabled" />&nbsp;
-            <input type="submit" name="merge" value="Merge changes" accesskey="r" />&nbsp;
-            <input type="submit" name="save" value="Submit changes" disabled="disabled" />&nbsp;
+            <input type="submit" name="preview" value="${_('Preview')}" disabled="disabled" />&nbsp;
+            <input type="submit" name="merge" value="${_('Merge changes')}" accesskey="r" />&nbsp;
+            <input type="submit" name="save" value="${_('Submit changes')}" disabled="disabled" />&nbsp;
           </py:when>
           <py:otherwise>
-            <input type="submit" name="preview" value="Preview Page" accesskey="r" />&nbsp;
-            <input type="submit" name="diff" value="Review Changes" accesskey="r" />&nbsp;
-            <input type="submit" id="save" name="save" value="Submit changes" />&nbsp;
+            <input type="submit" name="preview" value="${_('Preview Page')}" accesskey="r" />&nbsp;
+            <input type="submit" name="diff" value="${_('Review Changes')}" accesskey="r" />&nbsp;
+            <input type="submit" id="save" name="save" value="${_('Submit changes')}" />&nbsp;
           </py:otherwise>
-          <input type="submit" name="cancel" value="Cancel" />
+          <input type="submit" name="cancel" value="${_('Cancel')}" />
         </div>
       </form>
     </div>
