It's spelled Greenwich, not Greenwhich.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6995 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/prefs/templates/prefs_datetime.html
+++ b/trac/prefs/templates/prefs_datetime.html
@@ -34,7 +34,7 @@
 
       <p class="hint">
         Note: Universal Co-ordinated Time (UTC) is also known as Greenwich Mean Time (GMT). <br />
-        A positive offset is used to indicate a timezone at the east of Greenwhich, i.e. ahead of Universal Time.
+        A positive offset is used to indicate a timezone at the east of Greenwich, i.e. ahead of Universal Time.
       </p>
 
     </div>
