Don't show the page index for a limited size ticket query when the query results are generated by a !TicketQuery macro.
Fixes #7216.


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7055 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/query_results.html
+++ b/trac/ticket/templates/query_results.html
@@ -25,7 +25,7 @@
   <h2 py:if="paginator.has_more_pages">
     Results <span class="numresults">(${paginator.displayed_items()})</span>
   </h2>
-  <xi:include href="page_index.html" />
+  <xi:include py:if="paginator.show_index" href="page_index.html" />
   <py:for each="group_index, (groupname, results) in enumerate(groups)">
     <h2 py:if="groupname">
       ${fields[query.group].label}:
@@ -99,7 +99,7 @@
       </tbody>
     </table>
   </py:for>
-  <xi:include href="page_index.html" />
+  <xi:include py:if="paginator.show_index" href="page_index.html" />
 </div>
 
 
