Ticket query: get rid of the `num_matches` py:def macro and uses `ngettext` instead.
For this to work, the `ngettext` keyword declaration in setup.cfg had to be fixed and the `num` had to be added to kwargs for the message keyword expansion.


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7056 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/query.html
+++ b/trac/ticket/templates/query.html
@@ -24,12 +24,8 @@
   </head>
 
   <body>
-    <py:def function="num_matches(v)">
-      <span class="numrows">(${v or 'No'} match${v != 1 and 'es' or ''})</span>
-    </py:def>
-
     <div id="content" class="query">
-      <h1>$title ${num_matches(query.num_items)}</h1>
+      <h1>$title <span class="numrows">(${ngettext('%(num)s match', '%(num)s matches', query.num_items)})</span></h1>
 
       <div py:if="description" id="description" xml:space="preserve">
         ${wiki_to_html(context(report_resource), description)}
