--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -338,9 +338,17 @@ ${comment}</textarea></p>
                       <py:choose>
                         <span py:when="field.cc_entry"><!--! Special case for Cc: field -->
                           <em>${field.cc_entry}</em>
-                          <input type="checkbox" id="field-cc" name="cc_update" checked="${field.cc_update}" />
+                          <input type="checkbox" id="field-cc" name="cc_update"
+                            title="This checkbox allows you to add or remove yourself from the CC list."
+                            checked="${field.cc_update}" />
                         </span>
-                        <!--! All the other text input fields, including Cc: when TICKET_EDIT_CC is allowed -->
+                        <!--! Cc: when TICKET_EDIT_CC is allowed -->
+                        <span py:when="field.name == 'cc'">
+                          <input  type="text" id="field-${field.name}"
+                            title="Space or comma delimited email addresses and usernames are accepted."
+                            name="field_${field.name}" value="${ticket[field.name]}" />
+                        </span>
+                        <!--! All the other text input fields -->
                         <input py:otherwise="" type="text" id="field-${field.name}"
                           name="field_${field.name}" value="${ticket[field.name]}" />
                       </py:choose>
