Trunk: Merge r7086 from 0.11-stable to fix #7232
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7087 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -26,7 +26,7 @@
       <py:when test="ticket.exists">
         $("#changelog h3.change").addAnchor("Link to this change");
 
-        /* only enable control elements for the currenly selected action */
+        /* only enable control elements for the currently selected action */
         var actions = $("#action input[name='action']");
 
         function updateActionFields() {
@@ -366,8 +366,8 @@ ${comment}</textarea></p>
           <fieldset id="action">
             <legend>Action</legend>
             <div py:for="key, label, controls, hints in action_controls">
-              <input type="radio" id="$key" name="action" value="$key" checked="${action == key or None}" />
-                <label for="$key">$label</label>
+              <input type="radio" id="action_$key" name="action" value="$key" checked="${action == key or None}" />
+                <label for="action_$key">$label</label>
                 $controls
                 <span class="hint" py:for="hint in hints">$hint</span>
             </div>
