Trunk: Merge component removal test from 0.11-stable
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7091 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin_components.html
+++ b/trac/admin/templates/admin_components.html
@@ -73,7 +73,7 @@ $component.description</textarea>
         </form>
 
         <py:choose>
-          <form py:when="components" method="POST">
+          <form py:when="components" name="component_table" method="POST">
             <table class="listing" id="complist">
               <thead>
                 <tr><th class="sel">&nbsp;</th>
