Trunk: Merge r7098 from 0.11-stable
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7099 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin_milestones.html
+++ b/trac/admin/templates/admin_milestones.html
@@ -14,7 +14,7 @@
     <h2>Manage Milestones</h2>
 
     <py:choose test="view">
-      <form py:when="'detail'" class="mod" id="modmil" method="post">
+      <form py:when="'detail'" class="mod" id="modmil" method="post" name="modifymilestone">
         <fieldset>
           <legend>Modify Milestone:</legend>
           <div class="field">
