Trunk: Merge r7100 from 0.11-stable
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7101 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin_versions.html
+++ b/trac/admin/templates/admin_versions.html
@@ -14,7 +14,7 @@
     <h2>Manage Versions</h2>
 
     <py:choose test="view">
-      <form py:when="'detail'" class="mod" id="modver" method="post">
+      <form py:when="'detail'" class="mod" id="modver" name="modifyversion" method="post">
         <fieldset>
           <legend>Modify Version:</legend>
           <div class="field">
