Trunk: Merge r7110 from 0.11-stable
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7112 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin_milestones.html
+++ b/trac/admin/templates/admin_milestones.html
@@ -93,7 +93,7 @@ ${milestone.description}</textarea>
         </form>
 
         <py:choose>
-          <form py:when="milestones" method="POST">
+          <form py:when="milestones" id="milestone_table" method="POST">
             <table class="listing" id="millist">
               <thead>
                 <tr><th class="sel">&nbsp;</th>
