Trunk: Merge r7117 from 0.11-stable
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7119 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin_versions.html
+++ b/trac/admin/templates/admin_versions.html
@@ -70,7 +70,7 @@ $version.description</textarea>
         </form>
 
         <py:choose>
-          <form py:when="versions" method="POST">
+          <form py:when="versions" id="version_table" method="POST">
             <table class="listing" id="verlist">
               <thead>
                 <tr><th class="sel">&nbsp;</th>
