Trunk: Merge r7149 from 0.11-stable
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7151 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/search/templates/search.html
+++ b/trac/search/templates/search.html
@@ -21,7 +21,7 @@
     <div id="content" class="search">
 
       <h1><label for="q">Search</label></h1>
-      <form action="${href.search()}" method="get">
+      <form id="fullsearch" action="${href.search()}" method="get">
         <p>
           <input type="text" id="q" name="q" size="40" value="${query}" />
           <input type="hidden" name="noquickjump" value="1" />
