--- a/trac/templates/macros.html
+++ b/trac/templates/macros.html
@@ -208,7 +208,7 @@
   -     'alist' is an AttachmentList object (see attachment.py)
   -->
   <py:def function="attach_file_form(alist)">
-    <form py:if="alist.can_create" method="get" action="${alist.attach_href}" name="attachfile">
+    <form py:if="alist.can_create" method="get" action="${alist.attach_href}" id="attachfile">
       <div>
         <input type="hidden" name="action" value="new" />
         <input type="submit" name="attachfilebutton" value="${_('Attach file')}" />
