--- a/trac/ticket/templates/milestone_edit.html
+++ b/trac/ticket/templates/milestone_edit.html
@@ -38,7 +38,7 @@
         <h1 py:otherwise="">New Milestone</h1>
       </py:choose>
 
-      <form id="edit" name="edit" action="" method="post">
+      <form id="edit" action="" method="post">
         <input type="hidden" name="id" value="${milestone.name}" />
         <input type="hidden" name="action" value="edit" />
         <div class="field">
