--- a/trac/wiki/templates/wiki_edit.html
+++ b/trac/wiki/templates/wiki_edit.html
@@ -75,7 +75,7 @@
           </div>
         </py:when>
       </py:choose>
-      <form id="edit" action="${href.wiki(page.name)}" method="post" name="edit">
+      <form id="edit" action="${href.wiki(page.name)}" method="post">
         <fieldset class="iefix">
           <input type="hidden" name="action" value="edit" />
           <input type="hidden" name="version" value="$page.version" />
