--- a/trac/admin/templates/admin_milestones.html
+++ b/trac/admin/templates/admin_milestones.html
@@ -14,7 +14,7 @@
     <h2>Manage Milestones</h2>
 
     <py:choose test="view">
-      <form py:when="'detail'" class="mod" id="modmil" method="post" name="modifymilestone">
+      <form py:when="'detail'" class="mod" method="post" id="modifymilestone">
         <fieldset>
           <legend>Modify Milestone:</legend>
           <div class="field">
@@ -70,7 +70,7 @@ ${milestone.description}</textarea>
 
       <py:otherwise>
 
-        <form class="addnew" id="addmil" name="addmilestone" method="post">
+        <form class="addnew" id="addmilestone" method="post">
           <fieldset>
             <legend>Add Milestone:</legend>
             <div class="field">
