--- a/trac/prefs/templates/prefs.html
+++ b/trac/prefs/templates/prefs.html
@@ -26,7 +26,7 @@
         </li>
       </ul>
       <div id="tabcontent">
-        <form name="prefs" action="" method="post">
+        <form id="prefs" action="" method="post">
           ${select("*|text()")}
           <div class="buttons">
             <input type="hidden" name="action" value="save" />
