--- a/trac/templates/attachment.html
+++ b/trac/templates/attachment.html
@@ -15,7 +15,7 @@
     <div py:choose="mode" id="content" class="attachment">
       <py:when test="'new'">
         <h1>Add Attachment to <a href="${url_of(parent)}">${name_of(parent)}</a></h1>
-        <form id="attachment" name="attachment" method="post" enctype="multipart/form-data" action="">
+        <form id="attachment" method="post" enctype="multipart/form-data" action="">
           <div class="field">
             <label>File<py:if test="max_size >= 0"> (size limit
                   ${pretty_size(max_size, format='%d')})</py:if>:<br />
