--- a/trac/ticket/templates/milestone_view.html
+++ b/trac/ticket/templates/milestone_view.html
@@ -82,11 +82,11 @@
                   'MILESTONE_DELETE' in perm(milestone.resource) or
                   attachments.can_create"
            class="buttons">
-        <form py:if="'MILESTONE_MODIFY' in perm(milestone.resource)" method="get" action="" name="editmilestone">
+        <form py:if="'MILESTONE_MODIFY' in perm(milestone.resource)" method="get" action="" id="editmilestone">
           <input type="hidden" name="action" value="edit" />
           <input type="submit" value="${_('Edit milestone')}" />
         </form>
-        <form py:if="'MILESTONE_DELETE' in perm(milestone.resource)" method="get" action="" name="deletemilestone">
+        <form py:if="'MILESTONE_DELETE' in perm(milestone.resource)" method="get" action="" id="deletemilestone">
           <input type="hidden" name="action" value="delete" />
           <input type="submit" value="${_('Delete milestone')}" />
         </form>
