--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -124,7 +124,7 @@ label.disabled { color: #d7d7d7 }
 #header h1 :link:hover, #header h1 :visited:hover { color: #000 }
 
 /* Quick search */
-#search {
+#search, #quicksearch {
  clear: both;
  font-size: 10px;
  height: 2.2em;
