Trunk: Merge r7172 from 0.11-stable
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7173 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -124,15 +124,15 @@ label.disabled { color: #d7d7d7 }
 #header h1 :link:hover, #header h1 :visited:hover { color: #000 }
 
 /* Quick search */
-#search, #quicksearch {
+#quicksearch {
  clear: both;
  font-size: 10px;
  height: 2.2em;
  margin: 0 0 1em;
  text-align: right;
 }
-#search input { font-size: 10px }
-#search label { display: none }
+#quicksearch input { font-size: 10px }
+#quicksearch label { display: none }
 
 /* Navigation */
 .nav h2, .nav hr { display: none }
