--- a/trac/wiki/templates/wiki_diff.html
+++ b/trac/wiki/templates/wiki_diff.html
@@ -12,9 +12,10 @@
       <input type="hidden" name="action" value="delete" />
       <input type="hidden" name="version" value="$new_version" />
       <input type="hidden" name="old_version" value="$old_version" />
-      <input type="submit" name="delete_version" value="Delete ${
-        new_version - old_version &gt; 1 and 'version %d to ' % (old_version+1) or ''
-        }version $new_version" />
+      <py:choose test="">
+      <py:when test="new_version - old_version &gt; 1"><input type="submit" name="delete_version" value="${_('Delete version %(old_version)d to version %(version)d', old_version=(old_version + 1), version=new_version)}" /></py:when>
+      <py:otherwise test=""><input type="submit" name="delete_version" value="${_('Delete version %(version)d', version=new_version)}" /></py:otherwise>
+      </py:choose>
     </form>
   </div></py:match>
   <py:with vars="resource = page.resource">
