trunk: Merged [7277:7278] via svnmerge from [source:/branches/0.11-stable].
 * Deleting a milestone no longer includes the to-be-deleted milestone in the 'retarget to' dropdown. (#7127)
 * Documenting pre-existing `[ticket] default_severity` option. (#7104)

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7279 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/milestone_delete.html
+++ b/trac/ticket/templates/milestone_delete.html
@@ -27,7 +27,8 @@
       <label for="target">Retarget associated tickets to milestone</label>
       <select name="target" id="target">
         <option value="">None</option>
-        <option py:for="m in milestones">${m.name}</option>
+        <option py:for="m in milestones"
+                py:if="m.name != milestone.name">${m.name}</option>
       </select>
       <div class="buttons">
         <input type="submit" name="cancel" value="${_('Cancel')}" />
